--- a/index.html
+++ b/index.html
@@ -7,31 +7,35 @@
   <link href="css/type.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Gravitas+One" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Gravitas+One|Rammetto+One" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Comfortaa|Gravitas+One|Open+Sans|Rammetto+One" rel="stylesheet">
+
 </head>
 <body>
 
-  <div class="card">
+  <main class="pad-t-1-2">
 
-    <div class="push-1-2 island-1-2 water">
-      <h2 class="pad-t-2 tena push-0">Watermelon</h2>
-      <p>Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
-    </div>
+    <article class="push-1-2 water">
+      <div class="pad-t pad-b-2 gutter-1-2 max-length">
+        <h2 class="max-length pad-t tena push-0">Watermelon</h2>
+        <p class="max-length giga push-0">Watermelons are a sweet, popular fruit of summer, usually consumed fresh in slices. The rind of the fruit is mid- to dark green and usually mottled or striped, and the flesh can be red or pink (most commonly), orange, yellow, green or white.</p>
+      </div>
+    </article>
 
-    <div class="push-1-2 island-1-2 star">
-      <h2 class="pad-t-2 tena push-0">Starfruit</h2>
-      <p>The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
-    </div>
+    <article class="push-1-2 star">
+      <div class="pad-t pad-b gutter-1-2 max-length">
+        <h2 class="max-length pad-t tena push-0">Starfruit</h2>
+        <p class="giga">The fruit has distinctive ridges running down its sides (usually five but can sometimes vary); when cut in cross-section, it resembles a star, hence its name. The entire fruit is edible and is usually eaten out of hand.</p>
+      </div>
+    </article>
 
-    <div class="push-1-2 island-1-2 pers">
-      <h2 class="pad-t-2 tena push-0">Persimmon</h2>
-      <p>The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
-    </div>
+    <article class="push-1-2 pers">
+      <div class="pad-t-1-2 pad-b gutter-1-2 max-length">
+        <h2 class="max-length pad-t tena push-0">Persimmon</h2>
+        <p class="max-length giga">The non-astringent persimmon is squat like a tomato and is most commonly sold as <i>fuyu</i>. The ripe fruit of the cultivated strains range from glossy light yellow-orange to dark red-orange depending on the species and variety.</p>
+      </div>
+    </article>
 
-  </div>
+  </main>
 
 </body>
 </html>
